--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Title</title>
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+		<title>Sierpinski Triangle</title>
+		<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
 	</head>
 	<body>
 		<header>
-			<h1>Header</h1>
+			<h1>Sierpinski</h1>
 		</header>
 			<section id="content">
 				<canvas id="SierpinskiTriangle" data-processing-sources="SierpinskiTriangle.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    
 	    </footer>
 	</body>
 </html>
